# data-structure

./: .gitignore  CMakeLists.txt
file/: GAFA.txt  GMU.txt  GPU.txt  GUCM.txt  GUFS.txt  GUT.txt  PERSON.txt  SCNU.txt  SCUT.txt  SYSU.txt  XCM.txt
include/data/: file.h  header.h  infected.h  person.h  place.h  point.h  school.h  trace.h
src/: file.cpp  infected.cpp  main.cpp  person.cpp  place.cpp  point.cpp  trace.cpp
